--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,21 @@
 Package: mvgam
-Title: What the Package Does (One Line, Title Case)
+Title: Multivariate Bayesian Generalised Additive Models for discrete time series
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Nicholas",
+           family = "Clark",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to
-    pick a license
+           email = "nicholas.j.clark1214@.com")
+Description: Multivariate Bayesian Generalised Additive Models for discrete time series
+Maintainer: Nicholas J Clark <nicholas.j.clark1214@gmail.com>
+License: MIT + file LICENSE
+Depends: R (>= 4.0.0), mgcv, rjags
+Imports: parallel,
+    coda,
+    MCMCpack,
+    runjags,
+    MCMCvis,
+    dplyr
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
