--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,6 @@ export(lv_correlations)
 export(mvjagam)
 export(plot_mvgam_fc)
 export(plot_mvgam_trend)
+export(series_to_mvgam)
 export(sim_mvgam)
 importFrom(magrittr,"%>%")
