update analysis results

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(lv_correlations)
 export(mvjagam)
 export(plot_mvgam_fc)
 export(plot_mvgam_trend)
+export(plot_mvgam_uncertainty)
 export(series_to_mvgam)
 export(sim_mvgam)
 importFrom(magrittr,"%>%")
