initial particle filtering functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export("%>%")
 export(hpd)
 export(lv_correlations)
 export(mvjagam)
+export(pfilter_mvgam_fc)
+export(pfilter_mvgam_init)
 export(plot_mvgam_fc)
 export(plot_mvgam_trend)
 export(plot_mvgam_uncertainty)
