--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(lv_correlations)
 export(mvjagam)
 export(pfilter_mvgam_fc)
 export(pfilter_mvgam_init)
+export(pfilter_mvgam_online)
+export(pfilter_mvgam_smooth)
 export(plot_mvgam_fc)
 export(plot_mvgam_trend)
 export(plot_mvgam_uncertainty)
