add smooth plot functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(pfilter_mvgam_init)
 export(pfilter_mvgam_online)
 export(pfilter_mvgam_smooth)
 export(plot_mvgam_fc)
+export(plot_mvgam_smooth)
 export(plot_mvgam_trend)
 export(plot_mvgam_uncertainty)
 export(series_to_mvgam)
