--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,12 +5,14 @@ Authors@R:
     person(given = "Nicholas",
            family = "Clark",
            role = c("aut", "cre"),
-           email = "nicholas.j.clark1214@.com")
+           email = "nicholas.j.clark1214@gmail.com")
 Description: This package is for fitting Bayesian Generalised Additive Models to sets of discrete time series. 
-             The primary purpose of this package is to build a version of dynamic linear models that incorporates 
-             the flexibility of GAMs for the linear predictor as well as latent trend components that can be useful 
-             for time series analysis and forecasting. The package also includes utilities for online updating of 
-             forecast distributions using a recursive particle filter
+             The primary purpose of the package is to build a version of dynamic factor models that incorporates 
+             the flexibility of GAMs in the linear predictor and latent dynamic trend components that are useful 
+             for time series analysis and forecasting. Estimation is performed using Markov Chain Monte Carlo (MCMC) by
+             the Gibbs sampling software JAGS. The package also includes utilities for online updating of 
+             forecast distributions with a recursive particle filter that uses sequential importance sampling to 
+             assimilate new observations as they become available.
 Maintainer: Nicholas J Clark <nicholas.j.clark1214@gmail.com>
 License: MIT + file LICENSE
 Depends: R (>= 3.6.0), mgcv, rjags, parallel
