--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,10 +11,12 @@ export(pfilter_mvgam_init)
 export(pfilter_mvgam_online)
 export(pfilter_mvgam_smooth)
 export(plot_mvgam_fc)
+export(plot_mvgam_resids)
 export(plot_mvgam_smooth)
 export(plot_mvgam_trend)
 export(plot_mvgam_uncertainty)
 export(roll_eval_mvgam)
 export(series_to_mvgam)
 export(sim_mvgam)
+export(summary_mvgam)
 importFrom(magrittr,"%>%")
