--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(pfilter_mvgam_smooth)
 export(plot_mvgam_fc)
 export(plot_mvgam_resids)
 export(plot_mvgam_smooth)
+export(plot_mvgam_trace)
 export(plot_mvgam_trend)
 export(plot_mvgam_uncertainty)
 export(roll_eval_mvgam)
