update case study and init values

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(pfilter_mvgam_init)
 export(pfilter_mvgam_online)
 export(pfilter_mvgam_smooth)
 export(plot_mvgam_fc)
+export(plot_mvgam_ppc)
 export(plot_mvgam_resids)
 export(plot_mvgam_smooth)
 export(plot_mvgam_trace)
