add predict; update all beta priors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(plot_mvgam_smooth)
 export(plot_mvgam_trace)
 export(plot_mvgam_trend)
 export(plot_mvgam_uncertainty)
+export(predict_mvgam)
 export(roll_eval_mvgam)
 export(series_to_mvgam)
 export(sim_mvgam)
