more S3 methods; add rootogram PPC

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(dic,mvgam)
 S3method(plot,mvgam)
+S3method(ppc,mvgam)
 S3method(predict,mvgam)
 S3method(print,mvgam)
 S3method(print,mvgam_prefit)
@@ -22,12 +23,12 @@ export(pfilter_mvgam_smooth)
 export(plot_mvgam_factors)
 export(plot_mvgam_fc)
 export(plot_mvgam_pairs)
-export(plot_mvgam_ppc)
 export(plot_mvgam_resids)
 export(plot_mvgam_smooth)
 export(plot_mvgam_trace)
 export(plot_mvgam_trend)
 export(plot_mvgam_uncertainty)
+export(ppc)
 export(roll_eval_mvgam)
 export(series_to_mvgam)
 export(sim_mvgam)
