--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ License: MIT + file LICENSE
 Depends: R (>= 3.6.0), mgcv, rjags, parallel, runjags
 Imports: 
     pbapply,
+    tweedie,
     lubridate,
     MASS,
     purrr,
