improve variable checks; add parametric term and random effect plots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,8 @@ export(pfilter_mvgam_online)
 export(pfilter_mvgam_smooth)
 export(plot_mvgam_factors)
 export(plot_mvgam_fc)
-export(plot_mvgam_pairs)
+export(plot_mvgam_pterms)
+export(plot_mvgam_randomeffects)
 export(plot_mvgam_resids)
 export(plot_mvgam_smooth)
 export(plot_mvgam_trace)
