making functions more modular; improve priors; reduce sizes of model objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,9 +9,14 @@ S3method(print,mvgam_prefit)
 S3method(summary,mvgam)
 S3method(summary,mvgam_prefit)
 export("%>%")
+export(add_base_dgam_lines)
+export(add_poisson_lines)
+export(add_trend_lines)
+export(add_tweedie_lines)
 export(compare_mvgams)
 export(dic)
 export(eval_mvgam)
+export(get_monitor_pars)
 export(lv_correlations)
 export(mvjagam)
 export(pfilter_mvgam_fc)
