--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(summary,mvgam_prefit)
 export("%>%")
 export(add_base_dgam_lines)
 export(add_poisson_lines)
+export(add_stan_data)
 export(add_trend_lines)
 export(add_tweedie_lines)
 export(compare_mvgams)
