--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mvgam
 Title: Multivariate Bayesian Generalised Additive Models for discrete time series
-Version: 0.0.0.9000
+Version: 1.0.0
 Authors@R: 
     person(given = "Nicholas",
            family = "Clark",
@@ -9,8 +9,8 @@ Authors@R:
 Description: This package is for fitting Bayesian Generalised Additive Models to sets of discrete time series. 
              The primary purpose of the package is to build a version of dynamic factor models that incorporates 
              the flexibility of GAMs in the linear predictor and latent dynamic trend components that are useful 
-             for time series analysis and forecasting. Estimation is performed using Markov Chain Monte Carlo (MCMC) by
-             the Gibbs sampling software JAGS. The package also includes 
+             for time series analysis and forecasting. Estimation is performed using Markov Chain Monte Carlo (MCMC) with
+             either the Gibbs sampling software JAGS or with Hamiltonian Monte Carlo in the software Stan. The package also includes 
              utilities for online updating of  forecast distributions with a recursive particle filter that 
              uses sequential importance sampling to assimilate new observations as they become available.
 Maintainer: Nicholas J Clark <nicholas.j.clark1214@gmail.com>
