move all variable declarations to top of blocks in stan; add plot_series function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(plot_mvgam_fc)
 export(plot_mvgam_pterms)
 export(plot_mvgam_randomeffects)
 export(plot_mvgam_resids)
+export(plot_mvgam_series)
 export(plot_mvgam_smooth)
 export(plot_mvgam_trace)
 export(plot_mvgam_trend)
