add option to update priors using a dataframe

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(compare_mvgams)
 export(eval_mvgam)
 export(forecast)
 export(get_monitor_pars)
+export(get_mvgam_priors)
 export(lv_correlations)
 export(mvgam)
 export(pfilter_mvgam_fc)
@@ -37,4 +38,5 @@ export(ppc)
 export(roll_eval_mvgam)
 export(series_to_mvgam)
 export(sim_mvgam)
+export(update_priors)
 importFrom(magrittr,"%>%")
