use _glm functions for poisson models

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,4 +39,5 @@ export(roll_eval_mvgam)
 export(series_to_mvgam)
 export(sim_mvgam)
 export(update_priors)
+export(vectorise_stan_lik)
 importFrom(magrittr,"%>%")
