add function for tidier model code presentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(add_poisson_lines)
 export(add_stan_data)
 export(add_trend_lines)
 export(add_tweedie_lines)
+export(code)
 export(compare_mvgams)
 export(eval_mvgam)
 export(forecast)
