improve forecast function; add scoring function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,12 @@
 S3method(coef,mvgam)
 S3method(forecast,mvgam)
 S3method(plot,mvgam)
+S3method(plot,mvgam_forecast)
 S3method(ppc,mvgam)
 S3method(predict,mvgam)
 S3method(print,mvgam)
 S3method(print,mvgam_prefit)
+S3method(score,mvgam_forecast)
 S3method(summary,mvgam)
 S3method(summary,mvgam_prefit)
 export("%>%")
@@ -35,6 +37,7 @@ export(plot_mvgam_trend)
 export(plot_mvgam_uncertainty)
 export(ppc)
 export(roll_eval_mvgam)
+export(score)
 export(series_to_mvgam)
 export(sim_mvgam)
 export(student_t)
