--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -17,19 +17,46 @@ on:
 permissions:
   contents: read
 
+
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  R-CMD-check:
+    runs-on: ${{ matrix.config.os }}
+
+    name: ${{ matrix.config.os }} (${{ matrix.config.r }})
+
     strategy:
+      fail-fast: false
       matrix:
-        r-version: ['3.6.3', '4.1.1']
+        config:
+#           - {os: macOS-latest,   r: 'release'}
+
+#           - {os: windows-latest, r: 'release'}
+#           # Use 3.6 to trigger usage of RTools35
+#           - {os: windows-latest, r: '3.6'}
+
+          - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
+#           - {os: ubuntu-latest,   r: 'release'}
+#           - {os: ubuntu-latest,   r: 'oldrel-1'}
+#           - {os: ubuntu-latest,   r: 'oldrel-2'}
+#           - {os: ubuntu-latest,   r: 'oldrel-3'}
+          # Disable R 3.4 build due to https://github.com/r-lib/pak/issues/321
+          # - {os: ubuntu-latest,   r: 'oldrel-4'}
+
+    env:
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      R_KEEP_PKG_SOURCE: yes
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up R ${{ matrix.r-version }}
-        uses: r-lib/actions/setup-r@f57f1301a053485946083d7a45022b278929a78a
+      - uses: actions/checkout@v2
+
+      - uses: r-lib/actions/setup-pandoc@v2
+
+      - uses: r-lib/actions/setup-r@v2
         with:
-          r-version: ${{ matrix.r-version }}
+          r-version: ${{ matrix.config.r }}
+          http-user-agent: ${{ matrix.config.http-user-agent }}
+          use-public-rspm: true
+        
       - name: Install dependencies
         run: |
           install.packages(c("remotes", "rcmdcheck"))
