--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -20,6 +20,7 @@ permissions:
 
 jobs:
   R-CMD-check:
+    if: "! contains(github.event.head_commit.message, '[ci skip]')"
     runs-on: ${{ matrix.config.os }}
 
     name: ${{ matrix.config.os }} (${{ matrix.config.r }})
@@ -28,40 +29,96 @@ jobs:
       fail-fast: false
       matrix:
         config:
-#           - {os: macOS-latest,   r: 'release'}
-
-#           - {os: windows-latest, r: 'release'}
-#           # Use 3.6 to trigger usage of RTools35
-#           - {os: windows-latest, r: '3.6'}
-
-          - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
-#           - {os: ubuntu-latest,   r: 'release'}
-#           - {os: ubuntu-latest,   r: 'oldrel-1'}
-#           - {os: ubuntu-latest,   r: 'oldrel-2'}
-#           - {os: ubuntu-latest,   r: 'oldrel-3'}
-          # Disable R 3.4 build due to https://github.com/r-lib/pak/issues/321
-          # - {os: ubuntu-latest,   r: 'oldrel-4'}
-
+          # - {os: macOS-latest, r: 'devel', rtools: ''}
+          # - {os: macOS-latest, r: 'release', rtools: ''}
+          # - {os: windows-latest, r: 'devel', rtools: '43'}
+          # - {os: windows-latest, r: 'release', rtools: '42'}
+          # - {os: windows-latest, r: 'oldrel', rtools: '40'}
+          - {os: ubuntu-20.04, r: 'devel', rtools: ''}
+          # - {os: ubuntu-20.04, r: 'release', rtools: ''}
+          # - {os: ubuntu-20.04, r: 'oldrel', rtools: ''}
     env:
+      R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-      R_KEEP_PKG_SOURCE: yes
+      NOT_CRAN: true
 
     steps:
-      - uses: actions/checkout@v2
+      - name: cmdstan env vars
+        run: |
+          echo "CMDSTAN_PATH=${HOME}/.cmdstan" >> $GITHUB_ENV
+        shell: bash
 
-      - uses: r-lib/actions/setup-pandoc@v2
+      - uses: n1hility/cancel-previous-runs@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+        if: "!startsWith(github.ref, 'refs/tags/') && github.ref != 'refs/heads/master'"
 
-      - uses: r-lib/actions/setup-r@v2
+      - uses: actions/checkout@v3
+
+      - name: Install system dependencies
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libcurl4-openssl-dev || true
+          sudo apt-get install -y openmpi-bin openmpi-common libopenmpi-dev || true
+
+      - uses: r-lib/actions/setup-r@v2.4.0
         with:
           r-version: ${{ matrix.config.r }}
-          http-user-agent: ${{ matrix.config.http-user-agent }}
-          use-public-rspm: true
-        
+          rtools-version: ${{ matrix.config.rtools }}
+      - uses: r-lib/actions/setup-pandoc@v2.4.0
+
+      - name: Query dependencies
+        run: |
+          install.packages('remotes')
+          saveRDS(remotes::dev_package_deps(dependencies = TRUE), ".github/depends.Rds", version = 2)
+          writeLines(sprintf("R-%i.%i", getRversion()$major, getRversion()$minor), ".github/R-version")
+        shell: Rscript {0}
+
+      - name: Cache R packages
+        if: runner.os != 'Windows'
+        uses: actions/cache@v3
+        with:
+          path: ${{ env.R_LIBS_USER }}
+          key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-${{ hashFiles('.github/depends.Rds') }}
+          restore-keys: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-
+
       - name: Install dependencies
         run: |
-          install.packages(c("remotes", "rcmdcheck"))
+          Sys.setenv("MAKEFLAGS"="-j2")
           remotes::install_deps(dependencies = TRUE)
+          remotes::install_cran("rcmdcheck")
+          remotes::install_local(path = ".")
+          install.packages("curl")
         shell: Rscript {0}
+
+      - name: Install cmdstan
+        run: |
+          cmdstanr::check_cmdstan_toolchain(fix = TRUE)
+          cmdstanr::install_cmdstan(cores = 2)
+        shell: Rscript {0}
+
+      - name: Session info
+        run: |
+          options(width = 100)
+          pkgs <- installed.packages()[, "Package"]
+          sessioninfo::session_info(pkgs, include_base = TRUE)
+        shell: Rscript {0}
+
       - name: Check
-        run: rcmdcheck::rcmdcheck(args = "--no-manual", error_on = "error")
+        env:
+          _R_CHECK_CRAN_INCOMING_: false
+        run: rcmdcheck::rcmdcheck(args = c("--no-manual", "--as-cran"), error_on = "warning", check_dir = "check")
         shell: Rscript {0}
+
+      - name: Show testthat output
+        if: always()
+        run: find check -name 'testthat.Rout*' -exec cat '{}' \; || true
+        shell: bash
+
+      - name: Upload check results
+        if: failure()
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{ runner.os }}-r${{ matrix.config.r }}-results
+          path: check
