--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -60,7 +60,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y libcurl4-openssl-dev || true
-          sudo apt-get install -y openmpi-bin openmpi-common libopenmpi-dev || true
+          sudo apt-get install -y openmpi-bin openmpi-common libglpk-dev libglpk40 jags libv8-dev libnode-dev libopenmpi-dev || true
 
       - uses: r-lib/actions/setup-r@v2.4.0
         with:
