implementing leave-future-out cross-validation with PSIS

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 S3method(coef,mvgam)
 S3method(forecast,mvgam)
+S3method(lfo_cv,mvgam)
+S3method(logLik,mvgam)
 S3method(plot,mvgam)
 S3method(plot,mvgam_forecast)
 S3method(ppc,mvgam)
@@ -11,6 +13,7 @@ S3method(print,mvgam_prefit)
 S3method(score,mvgam_forecast)
 S3method(summary,mvgam)
 S3method(summary,mvgam_prefit)
+S3method(update,mvgam)
 export("%>%")
 export(add_tweedie_lines)
 export(code)
@@ -19,6 +22,7 @@ export(eval_mvgam)
 export(forecast)
 export(get_monitor_pars)
 export(get_mvgam_priors)
+export(lfo_cv)
 export(lognormal)
 export(lv_correlations)
 export(mvgam)
