updated lfo documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(lfo_cv,mvgam)
 S3method(logLik,mvgam)
 S3method(plot,mvgam)
 S3method(plot,mvgam_forecast)
+S3method(plot,mvgam_lfo)
 S3method(ppc,mvgam)
 S3method(predict,mvgam)
 S3method(print,mvgam)
