--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -34,11 +34,9 @@ jobs:
               knitr
               rmarkdown
               stan-dev/cmdstanr
-              rjags
-              runjags
               testthat
-              vdiffr
               rcmdcheck
+              covr
 
       - name: Build Cmdstan
         run: |
