VignetteBuilder field but no prebuilt vignette index
Meta/vignettes.rds is automatically generated by devtools
do not list it in .Rbuildignore

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -2,8 +2,12 @@
 ^\.Rproj\.user$
 ^LICENSE\.md$
 ^doc$
-^Meta$
 ^_pkgdown\.yml$
 ^docs$
 ^pkgdown$
 ^\.github$
+^README.Rmd
+^index.Rmd
+^index.md
+^manuscript_analysis
+
