add dependencies for GH actions

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -51,6 +51,9 @@ jobs:
           extra-packages: |
               knitr
               rmarkdown
+              rjags
+              coda
+              runjags
               stan-dev/cmdstanr
               testthat
               rcmdcheck
@@ -58,7 +61,7 @@ jobs:
       - name: Build Cmdstan
         run: |
           cmdstanr::check_cmdstan_toolchain(fix = TRUE)
-          cmdstanr::install_cmdstan(cores = parallel::detectCores())
+          cmdstanr::install_cmdstan()
         shell: Rscript {0}
 
       - uses: r-lib/actions/check-r-package@v2
