code streamlining; add hindcast function and mvgam-class MAN

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(coef,mvgam)
 S3method(forecast,mvgam)
+S3method(hindcast,mvgam)
 S3method(lfo_cv,mvgam)
 S3method(logLik,mvgam)
 S3method(plot,mvgam)
@@ -19,10 +20,12 @@ export("%>%")
 export(add_tweedie_lines)
 export(code)
 export(compare_mvgams)
+export(dynamic)
 export(eval_mvgam)
 export(forecast)
 export(get_monitor_pars)
 export(get_mvgam_priors)
+export(hindcast)
 export(lfo_cv)
 export(lognormal)
 export(lv_correlations)
