--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ S3method(score,mvgam_forecast)
 S3method(summary,mvgam)
 S3method(summary,mvgam_prefit)
 S3method(update,mvgam)
+S3method(variables,mvgam)
 export("%>%")
 export(add_tweedie_lines)
 export(code)
@@ -29,7 +30,6 @@ export(get_monitor_pars)
 export(get_mvgam_priors)
 export(hindcast)
 export(lfo_cv)
-export(lognormal)
 export(lv_correlations)
 export(mvgam)
 export(pfilter_mvgam_fc)
@@ -52,6 +52,7 @@ export(series_to_mvgam)
 export(sim_mvgam)
 export(student_t)
 export(tweedie)
+importFrom(brms,lognormal)
 importFrom(grDevices,devAskNewPage)
 importFrom(grDevices,hcl.colors)
 importFrom(grDevices,rgb)
@@ -80,6 +81,7 @@ importFrom(parallel,clusterExport)
 importFrom(parallel,makePSOCKcluster)
 importFrom(parallel,setDefaultCluster)
 importFrom(parallel,stopCluster)
+importFrom(posterior,variables)
 importFrom(stats,Gamma)
 importFrom(stats,acf)
 importFrom(stats,as.formula)
