--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(series_to_mvgam)
 export(sim_mvgam)
 export(student_t)
 export(tweedie)
+export(variables)
 importFrom(brms,lognormal)
 importFrom(grDevices,devAskNewPage)
 importFrom(grDevices,hcl.colors)
@@ -82,6 +83,7 @@ importFrom(parallel,makePSOCKcluster)
 importFrom(parallel,setDefaultCluster)
 importFrom(parallel,stopCluster)
 importFrom(posterior,variables)
+importFrom(rlang,missing_arg)
 importFrom(stats,Gamma)
 importFrom(stats,acf)
 importFrom(stats,as.formula)
