--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,17 @@
 S3method(as.data.frame,mvgam)
 S3method(as.matrix,mvgam)
 S3method(coef,mvgam)
+S3method(find_predictors,mvgam)
 S3method(forecast,mvgam)
+S3method(formula,mvgam)
+S3method(get_coef,mvgam)
+S3method(get_data,mvgam)
+S3method(get_predict,mvgam)
+S3method(get_vcov,mvgam)
 S3method(hindcast,mvgam)
 S3method(lfo_cv,mvgam)
 S3method(logLik,mvgam)
+S3method(model.frame,mvgam)
 S3method(plot,mvgam)
 S3method(plot,mvgam_forecast)
 S3method(plot,mvgam_lfo)
@@ -15,6 +22,7 @@ S3method(predict,mvgam)
 S3method(print,mvgam)
 S3method(print,mvgam_prefit)
 S3method(score,mvgam_forecast)
+S3method(set_coef,mvgam)
 S3method(summary,mvgam)
 S3method(summary,mvgam_prefit)
 S3method(update,mvgam)
@@ -108,6 +116,7 @@ importFrom(stats,is.ts)
 importFrom(stats,logLik)
 importFrom(stats,make.link)
 importFrom(stats,median)
+importFrom(stats,model.frame)
 importFrom(stats,na.pass)
 importFrom(stats,pacf)
 importFrom(stats,pbeta)
