update namespace and readme

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,7 +81,13 @@ importFrom(graphics,polygon)
 importFrom(graphics,rect)
 importFrom(graphics,rug)
 importFrom(graphics,title)
+importFrom(insight,find_predictors)
+importFrom(insight,get_data)
 importFrom(magrittr,"%>%")
+importFrom(marginaleffects,get_coef)
+importFrom(marginaleffects,get_predict)
+importFrom(marginaleffects,get_vcov)
+importFrom(marginaleffects,set_coef)
 importFrom(methods,new)
 importFrom(mgcv,betar)
 importFrom(mgcv,nb)
