improvements for cmdcheck

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -158,5 +158,7 @@ importFrom(stats,ts)
 importFrom(stats,update)
 importFrom(stats,update.formula)
 importFrom(stats,var)
+importFrom(utils,getFromNamespace)
 importFrom(utils,head)
+importFrom(utils,lsf.str)
 importFrom(utils,tail)
