--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -50,6 +50,7 @@ jobs:
           dependencies: NA
           extra-packages: |
               knitr
+              collapse
               rmarkdown
               rjags
               coda
