add energy score

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,6 +89,7 @@ importFrom(marginaleffects,get_predict)
 importFrom(marginaleffects,get_vcov)
 importFrom(marginaleffects,set_coef)
 importFrom(methods,new)
+importFrom(mgcv,bam)
 importFrom(mgcv,betar)
 importFrom(mgcv,nb)
 importFrom(parallel,clusterEvalQ)
@@ -98,6 +99,7 @@ importFrom(parallel,setDefaultCluster)
 importFrom(parallel,stopCluster)
 importFrom(posterior,variables)
 importFrom(rlang,missing_arg)
+importFrom(scoringRules,es_sample)
 importFrom(stats,Gamma)
 importFrom(stats,acf)
 importFrom(stats,as.formula)
