--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,16 +4,19 @@ S3method(as.data.frame,mvgam)
 S3method(as.matrix,mvgam)
 S3method(coef,mvgam)
 S3method(find_predictors,mvgam)
+S3method(find_predictors,mvgam_prefit)
 S3method(forecast,mvgam)
 S3method(formula,mvgam)
 S3method(get_coef,mvgam)
 S3method(get_data,mvgam)
+S3method(get_data,mvgam_prefit)
 S3method(get_predict,mvgam)
 S3method(get_vcov,mvgam)
 S3method(hindcast,mvgam)
 S3method(lfo_cv,mvgam)
 S3method(logLik,mvgam)
 S3method(model.frame,mvgam)
+S3method(model.frame,mvgam_prefit)
 S3method(plot,mvgam)
 S3method(plot,mvgam_forecast)
 S3method(plot,mvgam_lfo)
