--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -34,6 +34,7 @@ jobs:
               knitr
               collapse
               rmarkdown
+              ggplot2
               rjags
               coda
               runjags
