--- a/NAMESPACE
+++ b/NAMESPACE
@@ -128,6 +128,7 @@ importFrom(stats,logLik)
 importFrom(stats,make.link)
 importFrom(stats,median)
 importFrom(stats,model.frame)
+importFrom(stats,na.fail)
 importFrom(stats,na.pass)
 importFrom(stats,pacf)
 importFrom(stats,pbeta)
@@ -165,4 +166,5 @@ importFrom(stats,update.formula)
 importFrom(stats,var)
 importFrom(utils,getFromNamespace)
 importFrom(utils,head)
+importFrom(utils,lsf.str)
 importFrom(utils,tail)
