posterior_predict functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ S3method(as_draws_rvars,mvgam)
 S3method(coef,mvgam)
 S3method(find_predictors,mvgam)
 S3method(find_predictors,mvgam_prefit)
+S3method(fitted,mvgam)
 S3method(forecast,mvgam)
 S3method(formula,mvgam)
 S3method(get_coef,mvgam)
@@ -28,6 +29,9 @@ S3method(model.frame,mvgam_prefit)
 S3method(plot,mvgam)
 S3method(plot,mvgam_forecast)
 S3method(plot,mvgam_lfo)
+S3method(posterior_epred,mvgam)
+S3method(posterior_linpred,mvgam)
+S3method(posterior_predict,mvgam)
 S3method(ppc,mvgam)
 S3method(predict,mvgam)
 S3method(print,mvgam)
