--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,6 +26,7 @@ Imports:
     rstan (>= 2.19.2),
     posterior (>= 1.0.0),
     loo (>= 2.3.1),
+    rstantools (>= 2.1.1),
     parallel,
     pbapply,
     tweedie,
