fix rstantools and bayesplot dependencies

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,7 +76,10 @@ export(sim_mvgam)
 export(student_t)
 export(tweedie)
 export(variables)
+importFrom(bayesplot,color_scheme_get)
+importFrom(bayesplot,color_scheme_set)
 importFrom(brms,lognormal)
+importFrom(brms,mcmc_plot)
 importFrom(grDevices,devAskNewPage)
 importFrom(grDevices,hcl.colors)
 importFrom(grDevices,rgb)
@@ -120,6 +123,9 @@ importFrom(posterior,as_draws_matrix)
 importFrom(posterior,as_draws_rvars)
 importFrom(posterior,variables)
 importFrom(rlang,missing_arg)
+importFrom(rstantools,posterior_epred)
+importFrom(rstantools,posterior_linpred)
+importFrom(rstantools,posterior_predict)
 importFrom(scoringRules,es_sample)
 importFrom(stats,Gamma)
 importFrom(stats,acf)
