--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,6 +27,7 @@ Imports:
     posterior (>= 1.0.0),
     loo (>= 2.3.1),
     rstantools (>= 2.1.1),
+    bayesplot (>= 1.5.0),
     parallel,
     pbapply,
     tweedie,
