--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,9 @@ S3method(logLik,mvgam)
 S3method(mcmc_plot,mvgam)
 S3method(model.frame,mvgam)
 S3method(model.frame,mvgam_prefit)
+S3method(neff_ratio,mvgam)
+S3method(nuts_params,mvgam)
+S3method(pairs,mvgam)
 S3method(plot,mvgam)
 S3method(plot,mvgam_forecast)
 S3method(plot,mvgam_lfo)
@@ -36,6 +39,8 @@ S3method(ppc,mvgam)
 S3method(predict,mvgam)
 S3method(print,mvgam)
 S3method(print,mvgam_prefit)
+S3method(residuals,mvgam)
+S3method(rhat,mvgam)
 S3method(score,mvgam_forecast)
 S3method(set_coef,mvgam)
 S3method(summary,mvgam)
@@ -55,6 +60,8 @@ export(hindcast)
 export(lfo_cv)
 export(lv_correlations)
 export(mvgam)
+export(neff_ratio)
+export(nuts_params)
 export(pfilter_mvgam_fc)
 export(pfilter_mvgam_init)
 export(pfilter_mvgam_online)
@@ -69,6 +76,7 @@ export(plot_mvgam_smooth)
 export(plot_mvgam_trend)
 export(plot_mvgam_uncertainty)
 export(ppc)
+export(rhat)
 export(roll_eval_mvgam)
 export(score)
 export(series_to_mvgam)
@@ -76,8 +84,12 @@ export(sim_mvgam)
 export(student_t)
 export(tweedie)
 export(variables)
+exportPattern("^[[:alpha:]]+")
+importFrom(Rcpp,evalCpp)
 importFrom(bayesplot,color_scheme_get)
 importFrom(bayesplot,color_scheme_set)
+importFrom(bayesplot,neff_ratio)
+importFrom(bayesplot,nuts_params)
 importFrom(brms,lognormal)
 importFrom(brms,mcmc_plot)
 importFrom(grDevices,devAskNewPage)
@@ -121,6 +133,7 @@ importFrom(posterior,as_draws_df)
 importFrom(posterior,as_draws_list)
 importFrom(posterior,as_draws_matrix)
 importFrom(posterior,as_draws_rvars)
+importFrom(posterior,rhat)
 importFrom(posterior,variables)
 importFrom(rlang,missing_arg)
 importFrom(rstantools,posterior_epred)
@@ -192,3 +205,4 @@ importFrom(utils,getFromNamespace)
 importFrom(utils,head)
 importFrom(utils,lsf.str)
 importFrom(utils,tail)
+useDynLib(mvgam)
