fix the no export tag

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,7 +84,6 @@ export(sim_mvgam)
 export(student_t)
 export(tweedie)
 export(variables)
-exportPattern("^[[:alpha:]]+")
 importFrom(Rcpp,evalCpp)
 importFrom(bayesplot,color_scheme_get)
 importFrom(bayesplot,color_scheme_set)
@@ -92,6 +91,7 @@ importFrom(bayesplot,neff_ratio)
 importFrom(bayesplot,nuts_params)
 importFrom(brms,lognormal)
 importFrom(brms,mcmc_plot)
+importFrom(brms,ndraws)
 importFrom(grDevices,devAskNewPage)
 importFrom(grDevices,hcl.colors)
 importFrom(grDevices,rgb)
@@ -205,4 +205,4 @@ importFrom(utils,getFromNamespace)
 importFrom(utils,head)
 importFrom(utils,lsf.str)
 importFrom(utils,tail)
-useDynLib(mvgam)
+useDynLib(mvgam, .registration = TRUE)
