--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,6 +29,7 @@ Imports:
     loo (>= 2.3.1),
     rstantools (>= 2.1.1),
     bayesplot (>= 1.5.0),
+    matrixStats,
     parallel,
     pbapply,
     tweedie,
