--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,9 @@ S3method(get_vcov,mvgam)
 S3method(hindcast,mvgam)
 S3method(lfo_cv,mvgam)
 S3method(logLik,mvgam)
+S3method(log_posterior,mvgam)
+S3method(loo,mvgam)
+S3method(loo_compare,mvgam)
 S3method(mcmc_plot,mvgam)
 S3method(model.frame,mvgam)
 S3method(model.frame,mvgam_prefit)
@@ -58,6 +61,9 @@ export(get_monitor_pars)
 export(get_mvgam_priors)
 export(hindcast)
 export(lfo_cv)
+export(log_posterior)
+export(loo)
+export(loo_compare)
 export(lv_correlations)
 export(mvgam)
 export(neff_ratio)
@@ -87,6 +93,7 @@ export(variables)
 importFrom(Rcpp,evalCpp)
 importFrom(bayesplot,color_scheme_get)
 importFrom(bayesplot,color_scheme_set)
+importFrom(bayesplot,log_posterior)
 importFrom(bayesplot,neff_ratio)
 importFrom(bayesplot,nuts_params)
 importFrom(brms,lognormal)
@@ -113,6 +120,9 @@ importFrom(graphics,rug)
 importFrom(graphics,title)
 importFrom(insight,find_predictors)
 importFrom(insight,get_data)
+importFrom(loo,is.loo)
+importFrom(loo,loo)
+importFrom(loo,loo_compare)
 importFrom(magrittr,"%>%")
 importFrom(marginaleffects,get_coef)
 importFrom(marginaleffects,get_predict)
