--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,12 +92,17 @@ importFrom(bayesplot,color_scheme_set)
 importFrom(bayesplot,log_posterior)
 importFrom(bayesplot,neff_ratio)
 importFrom(bayesplot,nuts_params)
+importFrom(brms,dstudent_t)
 importFrom(brms,get_prior)
 importFrom(brms,logm1)
 importFrom(brms,lognormal)
 importFrom(brms,mcmc_plot)
 importFrom(brms,ndraws)
 importFrom(brms,prior_string)
+importFrom(brms,pstudent_t)
+importFrom(brms,qstudent_t)
+importFrom(brms,rstudent_t)
+importFrom(brms,student)
 importFrom(grDevices,devAskNewPage)
 importFrom(grDevices,hcl.colors)
 importFrom(grDevices,rgb)
@@ -164,7 +169,6 @@ importFrom(stats,dlnorm)
 importFrom(stats,dnbinom)
 importFrom(stats,dnorm)
 importFrom(stats,dpois)
-importFrom(stats,dt)
 importFrom(stats,ecdf)
 importFrom(stats,formula)
 importFrom(stats,frequency)
@@ -187,12 +191,10 @@ importFrom(stats,poisson)
 importFrom(stats,ppois)
 importFrom(stats,predict)
 importFrom(stats,printCoefmat)
-importFrom(stats,pt)
 importFrom(stats,qcauchy)
 importFrom(stats,qnorm)
 importFrom(stats,qqline)
 importFrom(stats,qqnorm)
-importFrom(stats,qt)
 importFrom(stats,quantile)
 importFrom(stats,rbeta)
 importFrom(stats,reformulate)
@@ -201,7 +203,6 @@ importFrom(stats,rlnorm)
 importFrom(stats,rnbinom)
 importFrom(stats,rnorm)
 importFrom(stats,rpois)
-importFrom(stats,rt)
 importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(stats,setNames)
