first gp() additions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,7 @@ export(plot_mvgam_series)
 export(plot_mvgam_smooth)
 export(plot_mvgam_trend)
 export(plot_mvgam_uncertainty)
+export(plot_predictions.mvgam)
 export(ppc)
 export(roll_eval_mvgam)
 export(score)
@@ -131,6 +132,7 @@ importFrom(magrittr,"%>%")
 importFrom(marginaleffects,get_coef)
 importFrom(marginaleffects,get_predict)
 importFrom(marginaleffects,get_vcov)
+importFrom(marginaleffects,plot_predictions)
 importFrom(marginaleffects,set_coef)
 importFrom(methods,new)
 importFrom(mgcv,bam)
@@ -150,6 +152,7 @@ importFrom(posterior,as_draws_rvars)
 importFrom(posterior,rhat)
 importFrom(posterior,variables)
 importFrom(rlang,missing_arg)
+importFrom(rlang,parse_expr)
 importFrom(rstantools,posterior_epred)
 importFrom(rstantools,posterior_linpred)
 importFrom(rstantools,posterior_predict)
@@ -169,7 +172,9 @@ importFrom(stats,dlnorm)
 importFrom(stats,dnbinom)
 importFrom(stats,dnorm)
 importFrom(stats,dpois)
+importFrom(stats,drop.terms)
 importFrom(stats,ecdf)
+importFrom(stats,fitted)
 importFrom(stats,formula)
 importFrom(stats,frequency)
 importFrom(stats,gaussian)
