bug in gp to s formula

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,6 +104,9 @@ importFrom(brms,pstudent_t)
 importFrom(brms,qstudent_t)
 importFrom(brms,rstudent_t)
 importFrom(brms,student)
+importFrom(ggplot2,theme_bw)
+importFrom(ggplot2,theme_get)
+importFrom(ggplot2,theme_set)
 importFrom(grDevices,devAskNewPage)
 importFrom(grDevices,hcl.colors)
 importFrom(grDevices,rgb)
