--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,9 @@ S3method(summary,mvgam_prefit)
 S3method(update,mvgam)
 S3method(variables,mvgam)
 export("%>%")
+export(AR)
+export(RW)
+export(VAR)
 export(add_tweedie_lines)
 export(code)
 export(compare_mvgams)
