--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -40,6 +40,7 @@ jobs:
               runjags
               stan-dev/cmdstanr
               testthat
+              usethis
               rcmdcheck
               covr
 
