some changes for cmdcheck

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -140,6 +140,7 @@ importFrom(magrittr,"%>%")
 importFrom(marginaleffects,get_coef)
 importFrom(marginaleffects,get_predict)
 importFrom(marginaleffects,get_vcov)
+importFrom(marginaleffects,plot_predictions)
 importFrom(marginaleffects,set_coef)
 importFrom(methods,new)
 importFrom(mgcv,bam)
