better conditional_effect plots; better error propagation of mgcv models

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -111,6 +111,9 @@ importFrom(brms,pstudent_t)
 importFrom(brms,qstudent_t)
 importFrom(brms,rstudent_t)
 importFrom(brms,student)
+importFrom(ggplot2,scale_colour_discrete)
+importFrom(ggplot2,scale_fill_discrete)
+importFrom(ggplot2,theme_classic)
 importFrom(grDevices,devAskNewPage)
 importFrom(grDevices,hcl.colors)
 importFrom(grDevices,rgb)
