getting piecewise trends available; also allowing no intercept in all observation formulas

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ S3method(update,mvgam)
 S3method(variables,mvgam)
 export("%>%")
 export(AR)
+export(PW)
 export(RW)
 export(VAR)
 export(add_tweedie_lines)
@@ -111,6 +112,7 @@ importFrom(brms,pstudent_t)
 importFrom(brms,qstudent_t)
 importFrom(brms,rstudent_t)
 importFrom(brms,student)
+importFrom(extraDistr,rlaplace)
 importFrom(ggplot2,scale_colour_discrete)
 importFrom(ggplot2,scale_fill_discrete)
 importFrom(ggplot2,theme_classic)
