--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -50,6 +50,10 @@ jobs:
           dependencies: NA
           extra-packages: |
               knitr
+              extraDistr
+              lubridate
+              splines2
+              xts
               collapse
               rmarkdown
               ggplot2
