first steps toward Nmixtures in mvgam

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,6 +77,7 @@ export(lfo_cv)
 export(lv_correlations)
 export(mvgam)
 export(neff_ratio)
+export(nmix)
 export(nuts_params)
 export(pfilter_mvgam_fc)
 export(pfilter_mvgam_init)
