fix cmdchecks; add links to seminar

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -186,6 +186,7 @@ importFrom(stats,cor)
 importFrom(stats,cov)
 importFrom(stats,cov2cor)
 importFrom(stats,dbeta)
+importFrom(stats,dbinom)
 importFrom(stats,density)
 importFrom(stats,dgamma)
 importFrom(stats,dlnorm)
@@ -208,6 +209,7 @@ importFrom(stats,na.fail)
 importFrom(stats,na.pass)
 importFrom(stats,pacf)
 importFrom(stats,pbeta)
+importFrom(stats,pbinom)
 importFrom(stats,pgamma)
 importFrom(stats,plnorm)
 importFrom(stats,plogis)
@@ -216,6 +218,7 @@ importFrom(stats,poisson)
 importFrom(stats,ppois)
 importFrom(stats,predict)
 importFrom(stats,printCoefmat)
+importFrom(stats,qbinom)
 importFrom(stats,qcauchy)
 importFrom(stats,qnorm)
 importFrom(stats,qqline)
