add seminar embed; update site

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -220,11 +220,13 @@ importFrom(stats,predict)
 importFrom(stats,printCoefmat)
 importFrom(stats,qbinom)
 importFrom(stats,qcauchy)
+importFrom(stats,qlogis)
 importFrom(stats,qnorm)
 importFrom(stats,qqline)
 importFrom(stats,qqnorm)
 importFrom(stats,quantile)
 importFrom(stats,rbeta)
+importFrom(stats,rbinom)
 importFrom(stats,reformulate)
 importFrom(stats,rgamma)
 importFrom(stats,rlnorm)
