lots of nmix improvements

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(Predict.matrix,mod.smooth)
 S3method(Predict.matrix,moi.smooth)
+S3method(add_residuals,mvgam)
 S3method(as.array,mvgam)
 S3method(as.data.frame,mvgam)
 S3method(as.matrix,mvgam)
@@ -64,6 +65,7 @@ export(GP)
 export(PW)
 export(RW)
 export(VAR)
+export(add_residuals)
 export(add_tweedie_lines)
 export(code)
 export(compare_mvgams)
@@ -249,4 +251,5 @@ importFrom(utils,getFromNamespace)
 importFrom(utils,head)
 importFrom(utils,lsf.str)
 importFrom(utils,tail)
+importFrom(wrswoR,sample_int_ccrank)
 useDynLib(mvgam, .registration = TRUE)
