--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -52,6 +52,8 @@ jobs:
               knitr
               extraDistr
               lubridate
+              wrswoR
+              tweedie
               splines2
               xts
               collapse
