--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -34,6 +34,8 @@ jobs:
               knitr
               extraDistr
               lubridate
+              wrswoR
+              tweedie
               splines2
               xts
               collapse
