add bernoulli and binomial observation families

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,6 +108,7 @@ importFrom(bayesplot,color_scheme_set)
 importFrom(bayesplot,log_posterior)
 importFrom(bayesplot,neff_ratio)
 importFrom(bayesplot,nuts_params)
+importFrom(brms,bernoulli)
 importFrom(brms,conditional_effects)
 importFrom(brms,dstudent_t)
 importFrom(brms,get_prior)
