few cmdcheck updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -183,6 +183,7 @@ importFrom(scoringRules,es_sample)
 importFrom(stats,Gamma)
 importFrom(stats,acf)
 importFrom(stats,as.formula)
+importFrom(stats,binomial)
 importFrom(stats,coef)
 importFrom(stats,complete.cases)
 importFrom(stats,cor)
