pass knots to get_mvgam_priors() in case they are needed for initial setups; necessary for soap films for instance

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -179,6 +179,7 @@ importFrom(posterior,rhat)
 importFrom(posterior,variables)
 importFrom(rlang,missing_arg)
 importFrom(rlang,parse_expr)
+importFrom(rlang,warn)
 importFrom(rstantools,posterior_epred)
 importFrom(rstantools,posterior_linpred)
 importFrom(rstantools,posterior_predict)
